Convert NoiseMap2D into a generic ArrayMap2D

--- a/generator/index.html
+++ b/generator/index.html
@@ -16,9 +16,9 @@
             noise.seed(n);
         }
     </script>
-    <script src="./noiseMap.js"></script>
+    <script src="./arrayMap2D.js"></script>
     <script>
-        testNoiseMap2D();
+        testArrayMap2D();
     </script>
 
 </html>
