Build a noise map based on the arraymp

--- a/generator/index.html
+++ b/generator/index.html
@@ -16,9 +16,11 @@
             noise.seed(n);
         }
     </script>
+    <script src="./util.js"></script>
     <script src="./arrayMap2D.js"></script>
+    <script src="./noiseMap2D.js"></script>
     <script>
-        testArrayMap2D();
+        testNoiseMap2D();
     </script>
 
 </html>
