Rudimentary ocean generation

--- a/generator/index.html
+++ b/generator/index.html
@@ -19,8 +19,9 @@
     <script src="./util.js"></script>
     <script src="./arrayMap2D.js"></script>
     <script src="./noiseMap2D.js"></script>
+    <script src="./generator.js"></script>
     <script>
-        testNoiseMap2D();
+        testGenerator();
     </script>
 
 </html>
