--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,13 @@
 
 <head>
     <meta charset="utf8" />
+    <style>
+        .app {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+        }
+    </style>
 </head>
 
 <body>
